--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,3 +17,13 @@
       .container
         = yield
       %footer
+        .container
+          .row
+            .col-md-9
+              =link_to "About Papers Past", '#'
+              •
+              =link_to "Getting Started", '#'
+              •
+              =link_to "Legal notices", '#'
+            .col-md-3
+              = link_to image_tag("logo-nlnz.jpg"), 'http://natlib.govt.nz/'
