--- a/app/views/about/about.html.haml
+++ b/app/views/about/about.html.haml
@@ -6,53 +6,39 @@
 
 			%p Papers Past contains more than three million pages of digitised New Zealand newspapers and periodicals. The collection covers the years 1839 to 1945 and includes 83 publications from all regions of New Zealand.
 
-			%p There are two main ways to find information in Papers Past: searching and browsing. Searching lets you enter a query term and retrieves articles that contain that term. Browsing lets you look at all the newspapers, starting with a year, a region, or a newspaper title. All the newspaper titles on the site can be searched and browsed.
 
-			%h2 Getting started
-
-			%p The Getting started page gives an overview of how to use Papers Past.
-			Go to the Getting started page
-
-			%h3 How to find out more about our newspaper collection
+			%h3 How we select new titles
 			
-			%p The newspapers on Papers Past are only a small protion of New Zealand newspapers. If you cannot find what you are looking for online, it may be available as a paper copy or microfilm. Check the National Newspaper Collection page on the National Library website for more information.
+			%p National Library curators select new newspaper titles for Papers Past based on a number of factors, such as national and regional significance, the availability of paper or microfilm copies of the newspaper, and ensuring a good range of regions and dates. We do not provide recent material because of copyright restrictions.
 
-			National Newspaper Collection — National Library website
-			
-			%h3 How to find out more about a newspaper
-			
-			%p Each newspaper on Papers Past has its own page containing information about the publication, including the date range which is available online and a link to an essay about the newspaper's history. You can find links to all the newspapers on the Browse by title page.
-			Go to the Browse by title page
+			%p To learn more about our newspaper digitisation programme, visit the Papers Past page on the National Library website.
 
-			%h3 Where to find Māori newspapers
+			%h3 What's new
 			
-			%p The Māori Niupepa Collection is a collection of historic newspapers published primarily for a Māori audience between 1842 and 1932. Digitised copies of these newspapers are available on the New Zealand Digital Library website.
-			Māori Niupepa Collection — New Zealand Digital Library website
-			How we select new titles
-			National Library curators select new newspaper titles for Papers Past based on a number of factors, such as national and regional significance, the availability of paper or microfilm copies of the newspaper, and ensuring a good range of regions and dates. We do not provide recent material because of copyright restrictions.
-			To find out about our newspaper digitisation programme, visit the Papers Past page on the National Library website.
-			Papers Past - National Library website
-			What's new
-			In April 2013 we added:
-			New Zealand Herald (1885-1924)
-			In May 2013 we added:
-			Hutt Valley Independent (1911-1919)
-			Lyttelton Times (1866-1869)
-			Manawatu Standard (1911-1912)
-			Manawatu Times (1909-1911)
-			Nelson Evening Mail (1910-1918)
-			North Otago Times (1901-1918)
-			Upper Hutt Weekly Review (1935-1939)
-			Waihi Daily Telegraph (1904-1909)
-			Waikato Times (1893-1895)
-			Wairarapa Daily Times (1879-1901)
-			In September 2013 we added:
-			King Country Chronicle (1906-1920)
-			Mount Ida Chronicle (1869-1926)
-			Oamaru Mail (1876-1920)
-			Timaru Herald (1901-1920)
-			Acknowledgements
-			The National Library would like to thank all those organisations that provided the original paper copies to the Alexander Turnbull Library for microfilming.
+			%p In April 2013 we added:
+
+			%ul 
+				%li New Zealand Herald (1885-1924)
+			
+			%p In May 2013 we added:
+			%ul 
+				%li Hutt Valley Independent (1911-1919)
+				%li Lyttelton Times (1866-1869)
+				%li Manawatu Standard (1911-1912)
+				%li Manawatu Times (1909-1911)
+				%li Nelson Evening Mail (1910-1918)
+				%li North Otago Times (1901-1918)
+				%li Upper Hutt Weekly Review (1935-1939)
+				%li Waihi Daily Telegraph (1904-1909)
+				%li Waikato Times (1893-1895)
+				%li Wairarapa Daily Times (1879-1901)
+			
+			%p In September 2013 we added:
+			%ul 
+				%li King Country Chronicle (1906-1920)
+				%li Mount Ida Chronicle (1869-1926)
+				%li Oamaru Mail (1876-1920)
+				%li Timaru Herald (1901-1920)
 
 			%h2#new_site About the new site
 
@@ -78,4 +64,7 @@
 
 			%p Lorem
 
+			%h2 Acknowledgements
+			
+			%p The National Library would like to thank all those organisations that provided the original paper copies to the Alexander Turnbull Library for microfilming.
 
