--- a/app/views/periodicals/_home_cols.html.haml
+++ b/app/views/periodicals/_home_cols.html.haml
@@ -7,7 +7,7 @@
 				- decade = (d * 10) + 1830
 				%li= link_to "#{decade}s", "/#{@type.to_s.dasherize}/date/#{decade}s"
 				
-		%p= link_to "Looking for newspapers after 1945?", "#"
+		= link_to "Looking for magazines and journals after 1945?", "#"
 	.col-md-6
 		%h3= link_to "By title", "/#{@type.to_s.dasherize}/title"
 		%ul
