--- a/app/views/shared/_date_picker.html.haml
+++ b/app/views/shared/_date_picker.html.haml
@@ -1,5 +1,6 @@
 %h4 
-	Dates between
+	What dates would you like to search?
+
 
 .search-option-panel-content
 
@@ -8,7 +9,7 @@
 
 		.slider-caption 
 			%input#year-start{ :type => 'text', :value => 1830, :size => 5 }
-			and
+			to
 			%input#year-end{ :type => 'text', :value => 1945, :size => 5 }
 			%em.date-precise-button
 				or,
