--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -1,6 +1,7 @@
 $ppGreen: desaturate(#93b05c, 5%);
 $ppAccent: #995078;
 $ppGray: #e3e3d4;
+$ppSuperHighlight: #fc3;
 
 
 @mixin border-radius($a: false, $b: false, $c: false, $d: false, $top-left: 0, $top-right: 0, $bottom-right: 0, $bottom-left: 0, $top: false, $bottom: false, $right: false, $left: false, $radius: false) {
@@ -172,6 +173,21 @@ ol.breadcrumb {
 }
 
 .format-home {
+	
+	padding-top: 1em;
+
+	h2:first-child {
+		margin-top: 0;
+	}
+	h2 {
+		small {
+			display: block;
+		}
+		a {
+			border-bottom: 2px dotted $ppGray;
+		}
+	}
+
 	h3 {
 		margin: 0 0 0.5em;
 		background: lighten($ppGreen, 40%);
@@ -192,20 +208,52 @@ ol.breadcrumb {
 			margin-left: 23%;
 		}
 	}
+	.search-tool-panel {
+		padding: 1em;
+		border-radius: 0 0 1em 1em;
+		border: 1px solid $ppGray;
+		display: none;
+		position: relative;
+	}
+
 }
+
+.close-widget {
+	opacity: 0.5;
+	position: absolute;
+	top: 0;
+	right: 0;
+	padding: 0.5em 1em;
+	font-size: small;
+	text-transform: uppercase;
+}
+.close-widget:hover {
+	opacity: 1.0;
+}
+
 
 .newspaper-pages {
 	.newspaper-page {
 		float: left;
 		margin: 10px 10px 10px 0;
 		text-align: center;
-		img {
-			max-width: 100%;
-			display: block;
-		}
+		max-width: 23%;
+		height: 260px;
+		overflow: hidden;
 		p {
-			text-transform: uppercase;
 			color: $ppGreen;
+			margin: 0;
+		}
+		.newspaper-page-image {
+			border-radius: 10px;
+			border: 1px solid $ppGray;
+			max-width: 100%;
+			max-height: 210px;
+			overflow:hidden;
+			margin: 0 0 0.5em;
+			img {
+				display: block;
+			}
 		}
 	}
 }
@@ -220,6 +268,16 @@ table {
 		max-width: 300px;
 	}
 }
+
+.search-controls {
+	overflow: hidden;
+	text-align: center;
+	.search-control-panel {
+		display: inline-block;
+		padding: 0 0 0 1em;
+	}
+}
+
 
 .results {
 	.nav-pills {
@@ -246,9 +304,6 @@ table {
 	.btn-info {
 		background: $ppAccent;
 		border: 1px solid $ppAccent;
-	}
-	.search-controls {
-		padding: 1em 0;
 	}
 	.results-info {
 		margin: 0;
@@ -282,6 +337,12 @@ table {
 	border: 1px solid $ppGray;
 	display: inline-block;
 	width: 100%;
+	.title {
+		display: block;
+	}
+	.newspaper-title {
+		padding-left: 1em;
+	}
 	.region-title {
 		font-weight: bold;
 	}
@@ -393,20 +454,17 @@ table {
 		.search-option-panel-content {
 			padding: 0 1em 1em 1em;
 		}
-		.slider-caption {
-			text-align: center;
-		}
-		.date-precise-button, .date-precise-hider {
-			display: block;
-			text-align: center;
-			margin: 0.5em 0 0 0;
-		}
-		.date-precise {
-			display: none;
-		}
-		label {
-			display: block;
-		}
+	}
+	.slider-caption {
+		text-align: center;
+	}
+	.date-precise-button, .date-precise-hider {
+		display: block;
+		text-align: center;
+		margin: 0.5em 0 0 0;
+	}
+	.date-precise {
+		display: none;
 	}
 	.active {
 		h4 span {
